changing deploy url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://reubenjamesbishop.github.io/personal-website",
+  "homepage": "https://reubenjamesbishop.github.io",
   "name": "my-website",
   "version": "0.1.0",
   "private": true,
